--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,6 +76,10 @@ h1, h2, h3 {
   color: #ed811f;
   margin-bottom: 1rem;
 }
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+}
 
 /* Responsividad */
 @media (max-width: 600px) {
